--- a/less/font-awesome.less
+++ b/less/font-awesome.less
@@ -327,3 +327,4 @@ ul.icons {
 .icon-paste:before                { content: "\f0ea"; }
 
 .icon-user-md:before              { content: "\f200"; }
+.icon-tv:before                   { content: "\f205"; }
